--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,251 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+button {
+  padding: 10px;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #0c396a;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  width: 80%;
+  box-shadow: 0px 5px 0px 0px #e9af1b;
+  margin-bottom: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button.next-question {
+  width: 130px;
+  margin-top: 40px;
 }
+
+/* button:hover {
+  background-color: #e9af1b;
+  color: #ffffff;
+} */
+
+/* .selected {
+  background-color: #FFEFD5;
+} */
+
+/* .wrong-answer {
+  color: #FF5733;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+} */
+
+/* .correct-answer {
+  color: #FF5733;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+} */
+
+/* .correct-answer.selected {
+  color: #FFFFFF;
+  background-color: #FF5733;
+} */
+
+/* .App-logo {
+  height: 20vmin;
+  margin-bottom: 20px;
+} */
+
+.App {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #0c396a;
+  background-color: #FCF300;
+  min-height: 100vh;
+  padding-top: 40px;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin 2s linear infinite;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .App {
+    background-color: #FCF300;
+  }
+}
+
+.App-header {
+  background-color: #FFD700;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.App-title {
+  font-size: 3rem;
+  margin-bottom: 20px;
+}
+
+.App-subtitle {
+  font-size: 1.2rem;
+  margin-bottom: 30px;
+}
+
+.App-link {
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.2s ease;
+}
+
+.App-link:hover {
+  color: #da4f20;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.answer-section {
+  margin-top: 50px;
+}
+
+.answer-section button {
+  margin-bottom: 40px;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.answer-message {
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: 50px;
+  margin-bottom: 10px;
+}
+
+.result-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 43%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+.restart-button {
+  position: fixed;
+  bottom: 40%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+}
+
+.start-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+/* Mahjong Quiz */
+h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 1rem; /* h1とh2の間にスペースを追加 */
+}
+
+h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 3rem; /* h1とh2の間にスペースを追加 */
+}
+
+/* 画像の幅を100%に設定する */
+.responsive-image {
+  width: 100%;
+}
+
+/* 幅が600px未満の場合に画像のサイズを70%に縮小する */
+@media (max-width: 600px) {
+  .responsive-image {
+  width: 90%;
+  margin: 0 auto;
+  display: block;
+  margin-top: 100px;
+  }
+  }
+
+.start-button {
+  margin-top: 10rem;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: url('https://fonts.gstatic.com/s/montserrat/v15/JTURjIg1_i6t8kCHKm45_dJE3gnD-w.ttf') format('truetype');
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.start-button,
+.next-question,
+.yaku-button,
+.yogo-button,
+.easy-button,
+.hard-button,
+.restart-button {
+  width: 200px;
+}
+
+html, body {
+  height: 100%;
+  overflow: hidden;
+  }
+
+  /* .answer-section {
+  height: calc(100% - 200px);
+  } */
+
+  input[type="radio"] {
+    margin-right: 5px;
+    transform: scale(1.5); /* ラジオボタンを1.5倍に拡大する */
+  }
+
+  label {
+    font-weight: bold;
+  }
+
+  input[type="radio"]:checked+label {
+    color: #FF0000;
+  }
+
+  .answer-item {
+    margin-bottom: 50px; /* 上下に10pxの空間を追加 */
+  }
